--- a/10a_omikuji/omikuji.html
+++ b/10a_omikuji/omikuji.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <div class = "back">
+        <button id = "btn99" class = "btn" type="button" onclick="history.back()">back</button>
+    </div>
     <div class="shutter opening"></div>
     <header>今日のあなたの運勢は？</header>
     <div class="wrapper" title="大吉だといいね～">
@@ -33,5 +36,6 @@
 
     <script src="js/omikuji.js"></script>
 </body>
+
 
 </html>
