--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
           
           <div class="item02">
-            <a href="05_06_tic tac toe/05_06_tic tac toe/05_tic tac toe/tic_tac_toe.html" title="vs computerです。"><img src="img/penguin.png" alt="〇✖ゲームvs computer"><br>〇✖ゲームvs computer</a>
+            <a href="07_tic tac toe(vs Computer)/tic_tac_toe.html" title="vs computerです。"><img src="img/penguin.png" alt="〇✖ゲームvs computer"><br>〇✖ゲームvs computer</a>
           </div>
           
           <div class="item02">
@@ -99,6 +99,7 @@
   </body>
 
 </html>
+
 
 
 
