--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
           
           <div class="item02">
-            <a href="07_tic tac toe vs computer level/tic_tac_toe_vs computer.html" title="vs computer level付き。"><img src="img/bear.png" alt="〇✖ゲーム"><br>〇✖ゲームvs computer<br>level設定</a>
+            <a href="08_tic tac toe_versionup/tic_tac_toe.html" title="vs computer level付き。"><img src="img/bear.png" alt="〇✖ゲーム"><br>〇✖ゲームvs computer<br>level設定</a>
           </div>
 
         </div>
@@ -99,6 +99,7 @@
   </body>
 
 </html>
+
 
 
 
