--- a/index.html
+++ b/index.html
@@ -93,12 +93,13 @@
     
     <!-- フッター -->
     <footer>
-      <p>Copyright 2024 your id & your name</p>
+      <p>247122 NOE</p>
     </footer>
 
   </body>
 
 </html>
+
 
 
 
